RESOLVED FIXED123063
RefPtr::releaseNonNull() incorrectly increments the refcount.
https://bugs.webkit.org/show_bug.cgi?id=123063
Summary RefPtr::releaseNonNull() incorrectly increments the refcount.
Andreas Kling
Reported 2013-10-19 11:18:42 PDT
I did a dumb.
Attachments
Patch (2.40 KB, patch)
2013-10-19 11:19 PDT, Andreas Kling
andersca: review+
Andreas Kling
Comment 1 2013-10-19 11:19:55 PDT
Andreas Kling
Comment 2 2013-10-19 12:54:04 PDT
Note You need to log in before you can comment on or make changes to this bug.