RefPtr::releaseNonNull() incorrectly increments the refcount. <https://webkit.org/b/123063>

Source/WTF:

Make releaseNonNull() use adoptRef(T&), mirroring release().

Reviewed by Anders Carlsson.

Tools:

Add an API test to verify that no extra refs are added when calling
RefPtr::releaseNonNull().

Reviewed by Anders Carlsson.

Canonical link: https://commits.webkit.org/141134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157673 268f45cc-cd09-0410-ab3c-d52691b4dbfc